--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,44 +1,42 @@
 security:
-    enable_authenticator_manager: true
-    # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
-    password_hashers:
-        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
-    # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
-    providers:
-        users:
-            entity:
-                # the class of the entity that represents users
-                class: 'App\Entity\User'
-                # the property to query by - e.g. email, username, etc
-                property: 'email'
-    firewalls:
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
-        main:
-            lazy: true
-            entry_point: form_login
+  enable_authenticator_manager: true
+  # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
+  password_hashers:
+    Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+  # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
+  providers:
+    users:
+      entity:
+        # the class of the entity that represents users
+        class: 'App\Entity\User'
+        # the property to query by - e.g. email, username, etc
+        property: 'email'
+  firewalls:
+    dev:
+      pattern: ^/(_(profiler|wdt)|css|images|js)/
+      security: false
+    main:
+      lazy: true
+      entry_point: form_login
 
+      form_login:
+        login_path: app_login
+        check_path: app_login
+        enable_csrf: true
+        username_parameter: email
+        password_parameter: password
 
-            form_login:
-                login_path: app_login
-                check_path: app_login
-                enable_csrf: true
-                username_parameter: email
-                password_parameter: password
-                #default_target_path: list_articles
+      logout:
+        path: app_logout
 
-            logout:
-                path: app_logout
+      # activate different ways to authenticate
+      # https://symfony.com/doc/current/security.html#the-firewall
 
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#the-firewall
+      # https://symfony.com/doc/current/security/impersonating_user.html
+      # switch_user: true
 
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
-
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
-    access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+  # Easy way to control access for large sections of your site
+  # Note: Only the *first* access control that matches will be used
+  access_control:
+  # - { path: ^/admin, roles: ROLE_ADMIN }
+   - { path: ^/retouren, roles: ROLE_USER }
